:rocket: [deploy] Concluído app web.

--- a/web/src/style/global.css
+++ b/web/src/style/global.css
@@ -19,7 +19,7 @@ body {
 }
 
 .btn-new-habit {
-  @apply border border-violet-500 font-semibold rounded-lg px-6 py-4 flex items-center gap-3 hover:border-violet-300;
+  @apply border border-violet-500 font-semibold rounded-lg px-6 py-4 flex items-center gap-3 hover:border-violet-300 transition-colors focus:outline-none focus:ring-2 focus:ring-violet-700 focus:ring-offset-2 focus:ring-offset-background;
 }
 
 .icon-add-habit {
@@ -43,7 +43,7 @@ body {
 }
 
 .box-day {
-  @apply w-10 h-10 border-2 rounded-lg;
+  @apply w-10 h-10 border-2 rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-violet-700 focus:ring-offset-2 focus:ring-offset-background;
 }
 
 .box-day-0 {
@@ -84,7 +84,7 @@ body {
 }
 
 .modal-close {
-  @apply absolute right-6 top-6 text-zinc-400 hover:text-zinc-200;
+  @apply absolute right-6 top-6 text-zinc-400 hover:text-zinc-200 focus:outline-none focus:ring-2 focus:ring-violet-700 focus:ring-offset-2 focus:ring-offset-zinc-900;
 }
 
 .modal-title {
@@ -101,11 +101,11 @@ body {
 }
 
 .input-title {
-  @apply p-4 rounded-lg mt-3 bg-zinc-800 text-white placeholder:text-zinc-400;
+  @apply p-4 rounded-lg mt-3 bg-zinc-800 text-white placeholder:text-zinc-400 focus:outline-none focus:ring-2 focus:ring-violet-700 focus:ring-offset-2 focus:ring-offset-zinc-900;
 }
 
 .button-form {
-  @apply mt-6 rounded-lg p-4 flex items-center justify-center gap-3 font-semibold bg-green-600 hover:bg-green-500;
+  @apply mt-6 rounded-lg p-4 flex items-center justify-center gap-3 font-semibold bg-green-600 hover:bg-green-500 transition-colors focus:outline-none focus:ring-2 focus:ring-green-600 focus:ring-offset-2 focus:ring-offset-zinc-900;
 }
 
 .container-checkbox-new-habit {
@@ -138,7 +138,7 @@ body {
 }
 
 .progress {
-  @apply h-3 rounded-xl bg-violet-600;
+  @apply h-3 rounded-xl bg-violet-600 transition-all;
 }
 
 .container-checkbox {
@@ -146,7 +146,7 @@ body {
 }
 
 .box-checkbox {
-  @apply flex items-center gap-3;
+  @apply flex items-center gap-3 focus:outline-none;
 }
 
 .span-habit {
@@ -154,5 +154,5 @@ body {
 }
 
 .box-indicator {
-  @apply w-8 h-8 rounded-lg flex items-center justify-center bg-zinc-900 border-2 border-zinc-800 group-data-[state=checked]:bg-green-500 group-data-[state=checked]:border-green-500; 
+  @apply w-8 h-8 rounded-lg flex items-center justify-center bg-zinc-900 border-2 border-zinc-800 group-data-[state=checked]:bg-green-500 group-data-[state=checked]:border-green-500 transition-colors group-focus:ring-2 group-focus:ring-violet-700 group-focus:ring-offset-2 group-focus:ring-offset-background; 
 }
